# op2_visual

./: .gitignore  CMakeLists.txt  README.md  op2_visual.rosinstall  package.xml
calibration/logitech_c270_hd_webcam/: logitech_c270_hd_webcam_params.yml
calibration/philips_spz_3000/: philips_spz_3000_params.yml
data/: ball_tracking_data.csv
include/op2_visual/: ball_detection.h  ball_tracking.h  display_utils.h  marker_detection.h  shared_memory_utils.h
src/: ball_detection.cpp  ball_tracking.cpp  camera_calibration_node.cpp  display_utils.cpp  marker_detection.cpp  offset_management.cpp  op2_visual_node.cpp  shared_memory_utils.cpp
